Feat: FreeBoard 자유 게시판 글 작성하기 기능 구현

--- a/src/main/resources/templates/freeboard/list.html
+++ b/src/main/resources/templates/freeboard/list.html
@@ -24,6 +24,6 @@
   </tr>
   </tbody>
 </table>
-<a th:href="@{/freeboard/new}">새 글 작성</a>
+<a th:href="@{/fashionlog/freeboard/new}">새 글 작성</a>
 </body>
 </html>
