Feat: DailyLook 글 작성 기능 추가
- DailyLookController에 글 작성 폼 조회 엔드포인트 추가
- DailyLookController에 글 작성 엔드포인트 추가
- DailyLookService에 createDailyLookPost 메서드 구현

--- a/src/main/resources/templates/dailylook/list.html
+++ b/src/main/resources/templates/dailylook/list.html
@@ -22,6 +22,6 @@
   </tr>
   </tbody>
 </table>
-<a href="@{/fashionlog/dailylook/new}">새 글 작성</a>
+<a th:href="@{/fashionlog/dailylook/new}">새 글 작성</a>
 </body>
 </html>
