--- a/src/main/resources/templates/freeboard/list.html
+++ b/src/main/resources/templates/freeboard/list.html
@@ -15,12 +15,12 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="freeboard : ${freeboards}">
+  <tr th:each="post : ${posts}">
     <td>
-      <a th:href="@{/freeboard/{id}(id=${freeboard.id})}" th:text="${freeboard.title}"></a>
+      <a th:href="@{/fashionlog/freeboard/{id}(id=${post.id})}" th:text="${post.title}"></a>
     </td>
     <td></td>
-    <td th:text="${freeboard.createdAt}"></td>
+    <td th:text="${post.createdAt}"></td>
   </tr>
   </tbody>
 </table>
