Feat: DailyLook 게시판 글 상세보기 기능 구현 - DailyLookController 글 상세보기 엔드포인트 추가 - DailyLookService getDailyLookPostById 메서드 구현 - 게시글 상세 정보를 표시할 detail.html 템플릿 생성

--- a/src/main/resources/templates/dailylook/list.html
+++ b/src/main/resources/templates/dailylook/list.html
@@ -16,7 +16,10 @@
   </thead>
   <tbody>
   <tr th:each="post:${dailylooks}">
-    <td th:text="${post.title}">제목</td>
+    <td>
+      <!-- 추가 코드 -->
+      <a th:text="${post.title}" th:href="@{/fashionlog/dailylook/{id}(id=${post.id})}">제목</a>
+    </td>
     <td>작성자</td>
     <td th:text="${post.createdAt}">작성일</td>
   </tr>
