--- a/src/main/resources/templates/interviewboard/list.html
+++ b/src/main/resources/templates/interviewboard/list.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <title>인터뷰 게시판</title>
-  <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <h1>인터뷰 게시판</h1>
@@ -24,6 +23,6 @@
   </tr>
   </tbody>
 </table>
-<a th:href="@{/interview/new}">새 글 작성</a>
+<a th:href="@{/fashionlog/interviewboard/new}">새 글 작성</a>
 </body>
 </html>
