--- a/src/main/resources/templates/freeboard/detail.html
+++ b/src/main/resources/templates/freeboard/detail.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>게시글 상세보기</title>
+  <title>자유 게시글 상세보기</title>
   <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h1>게시글 상세보기</h1>
+<h1>제목</h1>
 <div class="post-detail" th:if="${post.isPresent()}">
   <h2 th:text="${post.get().title}">Title</h2>
   <p class="post-meta">
