--- a/src/main/resources/templates/dailylook/list.html
+++ b/src/main/resources/templates/dailylook/list.html
@@ -21,7 +21,9 @@
       <a th:text="${post.title}" th:href="@{/fashionlog/dailylook/{id}(id=${post.id})}">제목</a>
     </td>
     <td>작성자</td>
-    <td th:text="${post.createdAt}">작성일</td>
+    <!-- updateAt이 null 이 아니면 updateAt 표시 -->
+    <td th:if="${post.updatedAt != null}" th:text="${post.updatedAt}">작성일</td>
+    <td th:unless="${post.updatedAt != null}" th:text="${post.createdAt}">작성일</td>
   </tr>
   </tbody>
 </table>
