Feat: DailyLook 게시판 글 삭제 기능 구현 - DailyLookController 글 삭제 엔드포인트 추가 - DailyLookService deleteDailyPost 메서드 구현 - detail.html 삭제를 위한 로직 추가

--- a/src/main/resources/templates/dailylook/detail.html
+++ b/src/main/resources/templates/dailylook/detail.html
@@ -10,6 +10,8 @@
 <p>Content: <span th:text="${dailyLook.content}">Content</span></p>
 <a href="/fashionlog/dailylook">뒤로</a>
 <a th:href="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.getId()})}" class="edit-btn">수정</a>
-
+<form th:action="@{/fashionlog/dailylook/{id}/delete(id=${dailyLook.getId()})}" method="post">
+  <button type="submit" class="delete-btn">삭제</button>
+</form>
 </body>
 </html>
