Refactor: 게시글 상세 조회 경로 수정

--- a/src/main/resources/templates/interviewboard/list.html
+++ b/src/main/resources/templates/interviewboard/list.html
@@ -16,7 +16,7 @@
   <tbody>
   <tr th:each="interview : ${interviewBoards}">
     <td>
-      <a th:href="@{/interviewboard/{id}(id=${interview.id})}" th:text="${interview.title}"></a>
+      <a th:href="@{/fashionlog/interviewboard/{id}(id=${interview.id})}" th:text="${interview.title}"></a>
     </td>
     <td></td>
     <td th:text="${interview.createdAt}"></td>
