--- a/src/main/resources/templates/freeboard/detail.html
+++ b/src/main/resources/templates/freeboard/detail.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>자유 게시글 상세보기</title>
-  <link rel="stylesheet" th:href="@{/css/style.css}" />
+  <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <h1>제목</h1>
@@ -16,10 +16,29 @@
   <div class="post-actions">
     <a th:href="@{/fashionlog/freeboard}">목록으로</a>
     <a th:href="@{/fashionlog/freeboard/{id}/edit(id=${post.get().id})}" class="edit-btn">수정</a>
-    <form th:action="@{/fashionlog/freeboard/{id}/delete(id=${post.get().id})}" method="post" class="delete-form">
+    <form th:action="@{/fashionlog/freeboard/{id}/delete(id=${post.get().id})}" method="post"
+          class="delete-form">
       <button type="submit">삭제</button>
     </form>
   </div>
+</div>
+<div class="post-comments">
+  <table>
+    <thead>
+    <tr>
+      <th>작성자</th>
+      <th>내용</th>
+      <th>작성일</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="comment : ${comments}">
+      <td>작성자</td>
+      <td th:text="${comment.content}"></td>
+      <td th:text="${comment.createdAt}"></td>
+    </tr>
+    </tbody>
+  </table>
 </div>
 </body>
 </html>
