--- a/src/main/resources/templates/freeboard/detail.html
+++ b/src/main/resources/templates/freeboard/detail.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
+  <meta charset="UTF-8">
   <title>자유 게시글 상세보기</title>
   <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<!-- 글 상세 보기 -->
 <h1>제목</h1>
 <div class="post-detail" th:if="${post.isPresent()}">
   <h2 th:text="${post.get().title}">Title</h2>
@@ -22,6 +24,16 @@
     </form>
   </div>
 </div>
+<!-- 댓글 작성 -->
+<h3>댓글 작성</h3>
+<form th:action="@{/fashionlog/freeboard/{id}/comment(id=${post.get().id})}" method="post">
+  <div>
+    <label for="content">내용</label>
+    <textarea id="content" name="content"></textarea>
+  </div>
+  <button type="submit">작성 완료</button>
+</form>
+<!-- 댓글 목록 -->
 <div class="post-comments">
   <table>
     <thead>
