--- a/src/main/resources/templates/dailylook/detail.html
+++ b/src/main/resources/templates/dailylook/detail.html
@@ -6,12 +6,29 @@
 </head>
 <body>
 <h1>Daily Look Post</h1>
-<h1 th:text="${dailyLook.title}">Title</h1>
-<p>Content: <span th:text="${dailyLook.content}">Content</span></p>
-<a href="/fashionlog/dailylook">뒤로</a>
-<a th:href="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.getId()})}" class="edit-btn">수정</a>
-<form th:action="@{/fashionlog/dailylook/{id}/delete(id=${dailyLook.getId()})}" method="post">
-  <button type="submit" class="delete-btn">삭제</button>
-</form>
+<div>
+  <h2 th:text="${dailyLook.title}">Title</h2>
+  <p>Content: <span th:text="${dailyLook.content}">Content</span></p>
+  <a href="/fashionlog/dailylook">뒤로</a>
+  <a th:href="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.getId()})}" class="edit-btn">수정</a>
+  <form th:action="@{/fashionlog/dailylook/{id}/delete(id=${dailyLook.getId()})}" method="post">
+    <button type="submit" class="delete-btn">삭제</button>
+  </form>
+</div>
+<table>
+  <tbody>
+  <tr th:each="comment:${dailyLookComments}">
+    <td>작성자</td>
+    <td th:text="${comment.content}">내용
+    <td th:if="${comment.updatedAt != null}" th:text="${comment.updatedAt}">작성일</td>
+    <td th:unless="${comment.updatedAt != null}" th:text="${comment.createdAt}">작성일</td>
+  </tr>
+  </tbody>
+</table>
+  <form th:action="@{/fashionlog/dailylook/{id}/comment(id=${dailyLook.id})}" th:object="${dailyLookComment}" method="post">
+    <label for="comment"></label>
+    <textarea id="comment" name="comment" th:field="*{content}"></textarea>
+    <button type="submit">등록</button>
+  </form>
 </body>
 </html>
