Refactor: 삭제되지 않은 게시글만 보여지도록 수정

--- a/src/main/resources/templates/interviewboard/list.html
+++ b/src/main/resources/templates/interviewboard/list.html
@@ -14,7 +14,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="interview : ${interviewBoards}">
+  <tr th:if="${interview.status}" th:each="interview : ${interviewBoards}">
     <td>
       <a th:href="@{/fashionlog/interviewboard/{id}(id=${interview.id})}" th:text="${interview.title}"></a>
     </td>
