Feat: DailyLook 댓글 삭제 기능 구현
- 소프트 딜리트 방식으로 댓글 삭제 기능 추가
- DailyLookCommentRepository findAllByDailyLookId 메서드를 findAllByDailyLookIdAndCommentStatusIsTrue 메서드로 변경
- DailyLookService에 deleteDailyLookComment 메서드 구현:
    - commentStatus를 false로 설정
    - deletedAt을 현재 시간으로 설정
- DailyLookController에 댓글 삭제 엔드포인트 추가
- 댓글 목록 조회 시 commentStatus가 true인 댓글만 반환하도록 수정
- HTML 템플릿에 각 댓글마다 삭제 버튼 추가
- 삭제 후 해당 게시글 상세 페이지로 리다이렉트 처리

--- a/src/main/resources/templates/dailylook/detail.html
+++ b/src/main/resources/templates/dailylook/detail.html
@@ -55,13 +55,19 @@
       <!-- 수정 버튼 -->
       <button th:id="'edit-button-' + ${comment.id}" th:onclick="'toggleEditForm(' + ${comment.id} + ')'">수정</button>
     </td>
+    <td>
+      <!-- 삭제 버튼 -->
+      <form th:action="@{/fashionlog/dailylook/{postid}/delete-comment/{commentid}(postid=${dailyLook.id}, commentid=${comment.id})}" method="post">
+        <button type="submit">삭제</button>
+      </form>
+    </td>
   </tr>
   </tbody>
 </table>
 <!-- 댓글 작성 -->
 <form th:action="@{/fashionlog/dailylook/{id}/comment(id=${dailyLook.id})}" th:object="${dailyLookComment}" method="post">
-  <label for="comment"></label>
-  <textarea id="comment" name="comment" th:field="*{content}"></textarea>
+  <label for="content">댓글</label>
+  <textarea id="content" name="content" th:field="*{content}"></textarea>
   <button type="submit">등록</button>
 </form>
 </body>
