--- a/src/main/resources/templates/freeboard/edit.html
+++ b/src/main/resources/templates/freeboard/edit.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>글 수정</h1>
+<!-- 자유 게시판 수정 폼 -->
 <form th:action="@{/fashionlog/freeboard/{id}/edit(id=${post.id})}" method="post">
   <div>
     <label for="title">제목</label>
