--- a/src/main/resources/templates/freeboard/form.html
+++ b/src/main/resources/templates/freeboard/form.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>글 작성</h1>
+<!-- 자유 게시판 작성 폼 -->
 <form th:action="@{/fashionlog/freeboard}" method="post">
   <div>
     <label for="title">제목</label>
