Refactor: DailyLook 삭제 기능 소프트딜리트로 변경 및 Dto클래스 @Data어노테이션 추가 - DailyLook:  - deleteDailyLook() 메서드 추가 - DailyLookDto, DailyLookCommentDto:  - @Data 어노테이션 추가 및 @Gettet, @Setter, toString 메서드 오버라이딩 삭제(@Data 어노테이션에 포함됨) - DailyLookController:  - getDailyLookPostById 메서드의 사용하지않는 매개변수 및 모델 삭제  - editDailyLookPost 메서드의 잘못된 return 값 수정 - DailyLookRepository:  - findByIdAndPostStatusIsTrue, findAllByPostStatusIsTrue 메서드 추가 - DailyLookService:  - deleteDailyLookPost 메서드 소프트딜리트 방식으로 수정  - findDailyLookById 메서드 수정

--- a/src/main/resources/templates/dailylook/edit.html
+++ b/src/main/resources/templates/dailylook/edit.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>자유 게시글 수정</title>
-  <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 <h1>글 수정</h1>
-<form th:action="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.getId()})}" method="post">
+<form th:action="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.id})}" method="post">
   <div>
     <label for="title">제목</label>
-    <input type="text" id="title" name="title" th:value="${dailyLook.getTitle()}">
+    <input type="text" id="title" name="title" th:value="${dailyLook.title}">
   </div>
   <div>
     <label for="content">내용</label>
-    <textarea id="content" name="content" th:text="${dailyLook.getContent()}"></textarea>
+    <textarea id="content" name="content" th:text="${dailyLook.content}"></textarea>
   </div>
   <button type="submit">수정하기</button>
 </form>
