--- a/src/main/resources/templates/dailylook/edit.html
+++ b/src/main/resources/templates/dailylook/edit.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 <header>
-  <!-- 헤더 내용 (detail.html과 동일) -->
+  <div class="logo-container">
+    <a href="/" class="logo">
+      <img src="#" alt="Logo" class="logo-image">
+    </a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><button class="login">UserName</button></li>
+      <li><button class="signup">탈퇴</button></li>
+    </ul>
+  </nav>
 </header>
 <div class="container">
   <h1>Edit Daily Look Post</h1>
