--- a/src/main/resources/templates/dailylook/detail.html
+++ b/src/main/resources/templates/dailylook/detail.html
@@ -46,7 +46,8 @@
         </div>
         <div class="comment-info">
           <span class="comment-author">작성자</span>
-          <span class="comment-date" th:text="${#temporals.format(comment.createdAt, 'MM.dd HH:mm:ss')}">07.29 12:12:41</span>
+          <span class="comment-date" th:if="${comment.updatedAt}" th:text="${#temporals.format(comment.updatedAt, 'MM.dd HH:mm:ss')}"></span>
+          <span class="comment-date" th:unless="${comment.updatedAt}" th:text="${#temporals.format(comment.createdAt, 'MM.dd HH:mm:ss')}"></span>
           <button th:id="'edit-button-' + ${comment.id}" th:onclick="'toggleEditForm(' + ${comment.id} + ')'" class="btn-edit">수정</button>
           <form th:action="@{/fashionlog/dailylook/{postid}/delete-comment/{commentid}(postid=${dailyLook.id}, commentid=${comment.id})}" method="post" style="display: inline;">
             <button type="submit" class="btn-delete">삭제</button>
