Design: 스타일 추가
- 게시판의 각 페이지의 스타일 추가

--- a/src/main/resources/templates/dailylook/edit.html
+++ b/src/main/resources/templates/dailylook/edit.html
@@ -34,8 +34,8 @@
       <textarea id="content" name="content" th:field="*{content}" required></textarea>
     </div>
     <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Save</button>
-      <a th:href="@{/fashionlog/dailylook/{id}(id=${dailyLook.id})}" class="btn btn-secondary">Cancel</a>
+      <button type="submit" class="btn btn-primary">저장</button>
+      <a th:href="@{/fashionlog/dailylook/{id}(id=${dailyLook.id})}" class="btn btn-secondary">취소</a>
     </div>
   </form>
 </div>
