--- a/src/main/resources/templates/dailylook/detail.html
+++ b/src/main/resources/templates/dailylook/detail.html
@@ -26,7 +26,14 @@
 <div class="container">
   <h1><a th:href="@{/fashionlog/dailylook}">Daily Look</a></h1>
   <div class="post-content">
-    <h2 th:text="${dailyLook.title}">Title</h2>
+    <div>
+      <h2 th:text="${dailyLook.title}">Title</h2>
+      <span>작성자</span>
+      <span class="post-date" th:if="${dailyLook.updatedAt}"
+            th:text="${#temporals.format(dailyLook.updatedAt, 'MM.dd HH:mm:ss')}"></span>
+      <span class="post-date" th:unless="${dailyLook.updatedAt}"
+            th:text="${#temporals.format(dailyLook.createdAt, 'MM.dd HH:mm:ss')}"></span>
+    </div>
     <p><span th:text="${dailyLook.content}">Content</span></p>
   </div>
   <div class="action-buttons">
