--- a/src/main/resources/templates/interviewboard/list.html
+++ b/src/main/resources/templates/interviewboard/list.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-  <title>인터뷰 게시판</title>
+  <meta charset="UTF-8">
+  <title>Interview List</title>
+  <link rel="stylesheet" th:href="@{/interview/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/interview/css/list.css}">
 </head>
+<header>
+  <div class="logo-container">
+    <a href="/" class="logo">
+      <img src="#" alt="Logo" class="logo-image">
+    </a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><button class="login">UserName</button></li>
+      <li><button class="signup">탈퇴</button></li>
+    </ul>
+  </nav>
+</header>
 <body>
-<h1>인터뷰 게시판</h1>
-<table>
-  <thead>
-  <tr>
-    <th>제목</th>
-    <th>작성자</th>
-    <th>작성일</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:if="${interview.status}" th:each="interview : ${interviewBoards}">
-    <td>
-      <a th:href="@{/fashionlog/interviewboard/{id}(id=${interview.id})}" th:text="${interview.title}"></a>
-    </td>
-    <td></td>
-    <td th:text="${interview.createdAt}"></td>
-  </tr>
-  </tbody>
-</table>
-<a th:href="@{/fashionlog/interviewboard/new}">새 글 작성</a>
+<div class="container">
+  <h1>Interview</h1>
+
+  <hr>
+
+  <table>
+    <thead>
+    <tr>
+      <th>제목</th>
+      <th>작성자</th>
+      <th>작성일</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="interview:${interviewBoards}" class="post-item">
+      <td>
+        <a th:text="${interview.title}" th:href="@{/fashionlog/interviewboard/{id}(id=${interview.id})}">제목</a>
+      </td>
+      <td>작성자</td>
+      <!-- updateAt이 null 이 아니면 updateAt 표시 -->
+      <td th:if="${interview.updatedAt != null}" th:text="${interview.updatedAt}">작성일</td>
+      <td th:unless="${interview.updatedAt != null}" th:text="${interview.createdAt}">작성일</td>
+    </tr>
+    </tbody>
+  </table>
+  <div class="actions"></div>
+  <a class="btn btn-primary" th:href="@{/fashionlog/interviewboard/new}">새 글 작성</a>
+</div>
 </body>
 </html>
